src/app/youth-intake/youthIntake.module.css
.fullIntakeContainer {
  background: #cccccc;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

.container {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  width: 100%;
}

.centeredTitle {
  text-align: center;
  margin-top: 20px;
}

.form, .form-youth-intake-edit {
  width: 100%; /* Width relative to the container */
  max-width: 1000px; /* Maximum width for larger screens */
  margin-top: 50px;
  background: #fff;
  border-radius: 5px;
  padding: 20px;
  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
}


.form > div {
  margin-bottom: 10px;
}

.form label {
  display: block;
  font-weight: 600;
  font-size: 14px;
  margin-bottom: 1px;
}

.form input,
.form textarea {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  width: 100%;
  border-radius: 5px;
  border: 2px solid #e2e2e2;
  font-size: 18px;
  padding: 10px;
  margin-bottom: 1px;
  color: #1f1f1f;
}

/* styles to display validation errors */
.errorText {
  color: red;
  font-size: 14px;
  margin-top: 5px;
}

.successfulText {
  color: rgb(9, 158, 4);
  font-size: 16px;
  margin-top: 5px;
  font-weight: bold;
}

/* Button */
.submitButton,
.customAddButton,
.customDeleteButton,
.cancelButton {
  background-color: black;
  color: white;
  padding: 10px 20px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-size: 16px;
  width: 100%; /* Button width */
}

.submitButton:hover,
.customAddButton:hover,
.customDeleteButton:hover {
  background-color: #333;
}


.form select {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  width: 100%;
  border-radius: 5px;
  border: 2px solid #e2e2e2;
  font-size: 18px;
  padding: 10px;
  margin-bottom: 5px;
  color: #1f1f1f;
  background-color: white;
  appearance: none; /* Removes the system default style */
  cursor: pointer;
}

.form select:focus {
  border-color: #007bff;
  outline: none;
  box-shadow: rgba(0, 123, 255, 0.25) 0px 0px 5px;
}

/* Radio buttons */
.radio-inline {
  display: inline-flex;
  align-items: center;
  gap: 5px;
  margin-right: 15px; /* Space between radio buttons */
}

.group {
  background-color: #f5f5f5;
  padding: 10px;
  margin-bottom: 15px;
  border-radius: 8px;
}

.custom-title {
  font-size: 24px;
  color: #ff5733;
  font-weight: bold;
  text-align: center;
  text-transform: uppercase;
}

/* Background color for children pre-intake */
.bglightgrey {
  background-color: #f9f9f9;
  padding: 10px 20px;
  border-radius: 5px;
}

.tabsContainer {
  background-color: #f9f9f9;
  padding: 40px;
  padding-left: 10px;
  padding-right: 10px;
  border-radius: 8px;
}

/* Select component */
select:disabled {
  background-color: #f0f0f0; /* Background color to indicate disabled */
  cursor: not-allowed; /* Changes the cursor to indicate disabled */
}

/* Tabs */
:global(.react-tabs__tab--selected) {
  background-color: #212529 !important; /* Ensures the color is applied */
  color: white !important;
  font-weight: bold;
  border-radius: 5px;
}

/* TabPanel */
:global(.react-tabs__tab-panel--selected) {
  background-color: #f0f0f0;
  padding: 20px;
  border-radius: 5px;
}

.customAddButton {
  background-color: green;
  color: white;
  border: none;
  padding: 10px 20px;
  border-radius: 5px;
  cursor: pointer;

  .form-check {
    display: flex;
    align-items: center; /* Center vertically */
    justify-content: space-between; /* Space between text and checkbox */
  }

  .form-check-label {
    margin-right: 8px; /* Space between label and checkbox */
  }

  .form-check-input {
    width: 1rem !important;
    height: 1rem !important;
  }
}

